data/derived/comb/progs/unify/prog4057.ml.out
Characters 28-54:
  let fixpoint (f,b) = wwhile (fun y b -> (f b, true),b);;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
